Fixed bug with playlist image file path